feat: add simulation test context